新增 扩展HBuilderX cli uni测试 web用法。cli uniapp.test web --project <ProjectPath> --browser chrome

--- a/package.json
+++ b/package.json
@@ -138,6 +138,10 @@
                 "title": "关于"
             },
             {
+                "command": "uniapp.test web",
+                "title": "uniapp.test web for hbuilderx cli"
+            },
+            {
                 "command": "uniapp.test web-chrome",
                 "title": "uniapp.test web-chrome for hbuilderx cli"
             },
@@ -174,7 +178,7 @@
             {
                 "name": "uniapp.test",
                 "descption": "使用HBuilderX cli运行uni-app (x)自动化测试到Web、微信小程序、Android、iOS、Harmony等平台",
-                "doc": "\nDocument: https://uniapp.dcloud.net.cn/worktile/auto/hbuilderx-cli-uniapp-test.html\nUsages:\n  cli uniapp.test web-chrome --project <ProjectPath>\n  cli uniapp.test web-safari --project <ProjectPath>\n  cli uniapp.test web-firefox --project <ProjectPath>\n  cli uniapp.test mp-weixin --project <ProjectPath>\n  cli uniapp.test app-android --project <ProjectPath> \n  cli uniapp.test app-ios-simulator --project <ProjectPath> \n  cli uniapp.test app-harmony --project <ProjectPath> --testcaseFile <testcase_file_path> --device_id <id> \n",
+                "doc": "\nDocument: https://uniapp.dcloud.net.cn/worktile/auto/hbuilderx-cli-uniapp-test.html\nUsages:\n  cli uniapp.test web --project <ProjectPath> --browser chrome \n cli uniapp.test web-chrome --project <ProjectPath>\n  cli uniapp.test web-safari --project <ProjectPath>\n  cli uniapp.test web-firefox --project <ProjectPath>\n  cli uniapp.test mp-weixin --project <ProjectPath>\n  cli uniapp.test app-android --project <ProjectPath> \n  cli uniapp.test app-ios-simulator --project <ProjectPath> \n  cli uniapp.test app-harmony --project <ProjectPath> --testcaseFile <testcase_file_path> --device_id <id> \n",
                 "args": [
                     {
                         "name": "help",
@@ -186,6 +190,40 @@
                         "usage": "",
                         "type": "string",
                         "default": ""
+                    }
+                ]
+            },
+            {
+                "name": "uniapp.test web",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test web --project <ProjectPath>",
+                "usage": "cli uniapp.test web --project <ProjectPath>",
+                "args": [
+                    {
+                        "name": "help",
+                        "descption": "uni-app (x) 自动化测试cli命令帮助"
+                    },
+                    {
+                        "name": "project",
+                        "descption": "uni-app (x) project path",
+                        "usage": "require",
+                        "type": "string",
+                        "default": ""
+                    },
+                    {
+                        "name": "testcaseFile",
+                        "descption": "(可选) 指定测试用例文件的相对路径（相对于项目根目录），比如pages/index/index.test.js",
+                        "usage": "",
+                        "type": "string",
+                        "default": ""
+                    },
+                    {
+                        "name": "browser",
+                        "descption": "指定浏览器类型，支持chrome、safari、firefox",
+                        "usage": "require",
+                        "type": "enum",
+                        "default": "",
+                        "enum": "chrome|safari|firefox"
                     }
                 ]
             },
