--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "hbuilderx-for-uniapp-test",
     "description": "uni-app自动化测试，支持初始化测试环境，运行测试到Android、iOS、h5、微信小程序、Harmony应用",
     "displayName": "HBuilderX uni-app自动化测试",
-    "version": "4.5.1",
+    "version": "4.5.2",
     "publisher": "hbuilderx",
     "engines": {
         "HBuilderX": "^3.7.3"
@@ -26,6 +26,7 @@
             "isUniPageDir": "workspaceFolderRelativePath =~ /^(src\\/pages|pages)\\/[^\\/]*$/",
             "isUniPageFile": "workspaceFolderRelativePath =~ /^(src\\/pages|pages)\\/.*\\.[vue|nvue]$/",
             "isTestConfigFile": "workspaceFolderRelativePath == 'env.js' || workspaceFolderRelativePath == 'jest.config.js'",
+            "isRecordTestCaseList": "config.hbuilderx-for-uniapp-test.recordTestCaseList",
             "isShowCreateTestCase": "expression.isCheckTestEnv && (expression.isUniPageDir || expression.isUniPageFile)",
             "isShowRunCurrentTestCaseMenu": "expression.isUniApp && expression.isJSFileForEnv && (workspaceFolderRelativePath =~ /^(src\\/pages|pages)\\/.*\\.test\\.js$/ || workspaceFolderRelativePath =~ /^\\pages\\/autotest\\/uni.*/)",
             "isShowRunALLTestCaseMenu": "expression.isUniApp && expression.isJSFileForEnv && expression.isJSFileForJestConfig && (explorerResourceIsWorkspaceFolder || expression.isTestConfigFile)"
@@ -132,6 +133,10 @@
             {
                 "command": "unitest.moreSettings",
                 "title": "更多插件配置"
+            },
+            {
+                "command": "unitest.recordTestCaseList",
+                "title": "运行单条test.js时记录到文件"
             },
             {
                 "command": "unitest.reloadEnv",
@@ -457,6 +462,11 @@
                     "default": true,
                     "description": "自动化测试时，使用HBuilderX内置的Node程序编译uni-app项目。"
                 },
+                "hbuilderx-for-uniapp-test.recordTestCaseList": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "当运行单条test.js用例文件，记录测试用例文件路径到.hbuilderx目录下。"
+                },
                 "hbuilderx-for-uniapp-test.isDebug": {
                     "type": "boolean",
                     "default": false,
@@ -688,6 +698,11 @@
                 },
                 {
                     "command": "unitest.moreSettings",
+                    "group": "unitest@1"
+                },
+                {
+                    "command": "unitest.recordTestCaseList",
+                    "checked": "expression.isRecordTestCaseList",
                     "group": "unitest@1"
                 },
                 {
