chore: 添加 ext-market 标识字段

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "displayName": "HBuilderX uni-app自动化测试",
   "version": "4.5.3",
   "publisher": "hbuilderx",
+  "__from": "ext-market",
   "engines": {
     "HBuilderX": "^3.7.3"
   },
